<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword"
    android:orientation="vertical"
    android:background="@drawable/bluegradientbackground">

    <TextView
        android:id="@+id/forgotpasstext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgotpasstext"
        android:gravity="center"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginTop="250dp"
        />

    <EditText
        android:id="@+id/forgotpassemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_email"
        android:ems="15"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:inputType="textEmailAddress"
        />

    <Button
        android:id="@+id/resetpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="8"
        android:text="@string/resetpassword"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"
        />

</LinearLayout>